--- a/2025-07-08/solution/register.html
+++ b/2025-07-08/solution/register.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Registration Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
-    <body style="background: linear-gradient(to right, #2c3e50, #4ca1af);">
-     <div class="container text-white mt-5">
+<body style="background: linear-gradient(to right, #2c3e50, #4ca1af);">
+
+  <div class="container text-white mt-5">
     <h1 class="text-center mb-4">Register</h1>
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-4">
@@ -18,42 +17,43 @@
           <div class="mb-3">
             <label for="username" class="form-label">Username:</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username" required>
-            
           </div>
+
           <div class="mb-3">
             <label for="email" class="form-label">Email:</label>
             <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
           </div>
 
-            <div class="mb-3">
+          <div class="mb-3">
             <label for="password" class="form-label">Password:</label>
             <div class="input-group">
-                <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required>
-                <span class="input-group-text toggle-password" data-target="password" style="cursor: pointer;">
+              <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required>
+              <span class="input-group-text toggle-password" data-target="password" style="cursor: pointer;">
                 <i class="fa fa-eye-slash"></i>
-                </span>
+              </span>
             </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="confirm-password" class="form-label">Confirm Password:</label>
+            <div class="input-group">
+              <input type="password" id="confirm-password" name="confirm-password" class="form-control" placeholder="Confirm your password" required>
+              <span class="input-group-text toggle-password" data-target="confirm-password" style="cursor: pointer;">
+                <i class="fa fa-eye-slash"></i>
+              </span>
             </div>
+          </div>
 
-        <div class="mb-3">
-        <label for="confirm-password" class="form-label">Confirm Password:</label>
-        <div class="input-group">
-            <input type="password" id="confirm-password" name="confirm-password" class="form-control" placeholder="Confirm your password" required>
-            <span class="input-group-text toggle-password" data-target="confirm-password" style="cursor: pointer;">
-            <i class="fa fa-eye-slash"></i>
-            </span>
-        </div>
-        </div>
-
+          <div id="formMessage" class="text-danger text-center mb-3"></div>
 
           <button type="submit" class="btn btn-primary w-100">Register</button>
-
           <a href="login.html" class="btn btn-secondary w-100 mt-2">Already have an account? Login</a>
         </form>
       </div>
     </div>
   </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7fN4w9z4c5e5z4c5e5z4c5e5z4c5e"></script>
-    <script src="register.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="register.js"></script>
 </body>
 </html>
