--- a/2025-07-08/solution/login.html
+++ b/2025-07-08/solution/login.html
@@ -13,6 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-4">
         <form id="loginForm" class="border p-4 rounded shadow text-white">
+            <div id="formMessage" class="mb-3 fw-bold text-center"></div>
           <div class="mb-3">
             <label for="email" class="form-label">Email:</label>
             <input type="email" id="email" class="form-control" placeholder="Enter your email" required />
