--- a/2025-07-08/solution/login.html
+++ b/2025-07-08/solution/login.html
@@ -23,9 +23,10 @@
             <label for="password" class="form-label">Password:</label>
             <div class="input-group">
               <input type="password" id="password" class="form-control" placeholder="Enter your password" required />
-              <span class="input-group-text toggle-password" style="cursor: pointer;">
-                <i class="fa fa-eye-slash" id="eyeIcon"></i>
+              <span class="input-group-text toggle-password" data-target="password" style="cursor: pointer;">
+                <i class="fa fa-eye-slash"></i>
               </span>
+
             </div>
           </div>
 
