--- a/2025-07-08/solution/register.html
+++ b/2025-07-08/solution/register.html
@@ -7,48 +7,51 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
-<body style="background: linear-gradient(to right, #2c3e50, #4ca1af);">
+<body style="background: white">
+  <div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="container text-white mt-5">
+      <h1 class="text-center mb-3 text-dark">Hey there! 👋</h1>
+      <p class="text-center mb-4 text-dark">Just a few quick steps and you’ll be all set up!</p>
 
-  <div class="container text-white mt-5">
-    <h1 class="text-center mb-4">Register</h1>
-    <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-4">
-        <form id="registerForm" class="border p-4 rounded shadow text-white">
-          <div class="mb-3">
-            <label for="username" class="form-label">Username:</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username" required>
-          </div>
-
-          <div class="mb-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
-          </div>
-
-          <div class="mb-3">
-            <label for="password" class="form-label">Password:</label>
-            <div class="input-group">
-              <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required>
-              <span class="input-group-text toggle-password" data-target="password" style="cursor: pointer;">
-                <i class="fa fa-eye-slash"></i>
-              </span>
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-4">
+          <form id="registerForm" class="border p-4 rounded shadow text-white bg-white">
+            <div class="mb-2">
+              <label for="username" class="form-label">Username:</label>
+              <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username" required>
             </div>
-          </div>
 
-          <div class="mb-3">
-            <label for="confirm-password" class="form-label">Confirm Password:</label>
-            <div class="input-group">
-              <input type="password" id="confirm-password" name="confirm-password" class="form-control" placeholder="Confirm your password" required>
-              <span class="input-group-text toggle-password" data-target="confirm-password" style="cursor: pointer;">
-                <i class="fa fa-eye-slash"></i>
-              </span>
+            <div class="mb-2">
+              <label for="email" class="form-label">Email:</label>
+              <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
             </div>
-          </div>
 
-          <div id="formMessage" class="text-danger text-center mb-3"></div>
+            <div class="mb-2">
+              <label for="password" class="form-label">Password:</label>
+              <div class="input-group">
+                <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required>
+                <span class="input-group-text toggle-password" data-target="password" style="cursor: pointer;">
+                  <i class="fa fa-eye-slash"></i>
+                </span>
+              </div>
+            </div>
 
-          <button type="submit" class="btn btn-primary w-100">Register</button>
-          <a href="login.html" class="btn btn-secondary w-100 mt-2">Already have an account? Login</a>
-        </form>
+            <div class="mb-2">
+              <label for="confirm-password" class="form-label">Confirm Password:</label>
+              <div class="input-group">
+                <input type="password" id="confirm-password" name="confirm-password" class="form-control" placeholder="Confirm your password" required>
+                <span class="input-group-text toggle-password" data-target="confirm-password" style="cursor: pointer;">
+                  <i class="fa fa-eye-slash"></i>
+                </span>
+              </div>
+            </div>
+
+            <div id="formMessage" class="text-center mt-3 fw-bold"></div>
+
+            <button type="submit" class="btn btn-primary w-100 mb-2">Register</button>
+            <a href="login.html" class="btn btn-secondary w-100 mt-2">Already have an account? Login</a>
+          </form>
+        </div>
       </div>
     </div>
   </div>
