--- a/2025-07-08/solution/login.html
+++ b/2025-07-08/solution/login.html
@@ -14,28 +14,28 @@
       <h1 class="text-center mb-3 text-dark">Welcome Back! 👋</h1>
       <div id="formMessage" class="mb-3 fw-bold text-center"></div>
 
-      <form id="loginForm" class="border p-4 rounded shadow bg-white text-dark d-flex flex-column justify-content-between" style="min-height: 400px;">
-        <div class="mb-0">
-          <label for="email" class="form-label">Email:</label>
-          <input type="email" id="email" class="form-control" placeholder="Enter your email" required />
-        </div>
+     <form id="loginForm" class="border p-4 rounded shadow bg-white text-dark">
+  <div class="mb-3">
+    <label for="email" class="form-label">Email:</label>
+    <input type="email" id="email" class="form-control" placeholder="Enter your email" required />
+  </div>
 
-        <div class="mb-0">
-          <label for="password" class="form-label">Password:</label>
-          <div class="input-group">
-            <input type="password" id="password" class="form-control" placeholder="Enter your password" required />
-            <span class="input-group-text toggle-password" data-target="password" style="cursor: pointer;">
-              <i class="fa fa-eye-slash"></i>
-            </span>
-          </div>
-        </div>
+  <div class="mb-3">
+    <label for="password" class="form-label">Password:</label>
+    <div class="input-group">
+      <input type="password" id="password" class="form-control" placeholder="Enter your password" required />
+      <span class="input-group-text toggle-password" data-target="password" style="cursor: pointer;">
+        <i class="fa fa-eye-slash"></i>
+      </span>
+    </div>
+  </div>
 
-        <button type="submit" class="btn btn-primary w-100">Login</button>
+  <button type="submit" class="btn btn-primary w-100 mb-3">Login</button>
 
-        <a href="register.html" class="btn btn-secondary w-100 mt-1">
-          <i class="fa-solid fa-hand-pointer me-2"></i> New here? Let's get you started!
-        </a>
-      </form>
+  <a href="register.html" class="btn btn-secondary w-100">
+    <i class="fa-solid fa-hand-pointer me-2"></i> New here? Let's get you started!
+  </a>
+</form>
 
       <!-- Toast for success message -->
       <div class="toast-container mt-3 d-flex justify-content-center">
